VirtualService & DestinationRules/CanaryDeployment/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookapp-deployment-v1
spec:
  selector:
    matchLabels:
      app: bookapp
      version: v1
  template:
    metadata:
      labels:
        app: bookapp
        version: v1
    spec:
      containers:
      - name: bookappcontainer
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: book-app-volume
          mountPath:  /usr/share/nginx/html
      volumes:
      - name: book-app-volume
        configMap:
          name: bookapp-v1-config-map
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookapp-deployment-v2
spec:
  selector:
    matchLabels:
      app: bookapp
      version: v2
  template:
    metadata:
      labels:
        app: bookapp
        version: v2
    spec:
      containers:
      - name: bookappcontainer
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: book-app-volume
          mountPath:  /usr/share/nginx/html
      volumes:
      - name: book-app-volume
        configMap:
          name: bookapp-v2-config-map
---
apiVersion: v1
kind: Service
metadata:
  name: bookapp-svc
spec:
  selector:
    app: bookapp
  ports:
  - port: 80
---
