VirtualService & DestinationRules/CanaryDeployment/destinationrule.yaml
# See more at https://istio.io/docs/reference/config/networking/destination-rule/
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bookapp-dest-rule
spec:
  host: bookapp-svc.default.svc.cluster.local
  subsets:
  - name: bookapp-v1-subset
    labels:
      version: v1
      app: bookapp
  - name: bookapp-v2-subset
    labels:
      version: v2
      app: bookapp
