VirtualService & DestinationRules/CanaryDeployment/virtualservice.yaml
# See more at https://istio.io/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookapp-virtualservice
spec:
  hosts:
  - bookapp-svc.default.svc.cluster.local
  http:
  - name: 'v1-route'
    route:
    - destination:
        host: bookapp-svc.default.svc.cluster.local
        subset: bookapp-v1-subset
      weight: 90
    - destination:
        host: bookapp-svc.default.svc.cluster.local
        subset: bookapp-v2-subset
      weight: 10
